# Patchini

./: Cargo.toml  build.rs
resources/: resources.res
src/: apply_tab.rs  create_tab.rs  ids.rs  main.rs  main_window.rs  patch.rs
