[package]
name = "Patchini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.42"
walkdir = "2.5.0"
winsafe = { version = "0.0.22", features = ["kernel", "gui", "shell", "dshow"] }
zstd = "0.13.2"
